--- a/cursos.html
+++ b/cursos.html
@@ -21,6 +21,7 @@
 <menu-bar></menu-bar>
 
 <div class="js-page">
+  <br>
   <div class="js-post">
     <h1>Cursos</h1>
     <p>
@@ -35,11 +36,10 @@
   </div>
   <br>
   <!--#region CURSOS -->
-  <div class="child js-post" id="informatica">
+  <div class="js-post" id="informatica">
+    <h3>Curso de Informática Básica e Avançada</h3>
     <img src="./files/informaticaCapa.png" alt="">
     <div>
-      <h3>Curso de Informática Básica e Avançada</h3>
-      <hr>
       <p>
         Aprenda os conceitos iniciais de informática como navegar na internet, editar textos, criar elementos gráficos,
         configurar o computador e muito mais. Inicie ainda os conhecimentos de informática avançada como download e
@@ -49,20 +49,18 @@
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada"
-        style="float: right;" target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
-  <div class="child js-post" id="designgrafico">
+  <div class="js-post" id="designgrafico">
+    <h3>Curso Completo de Design Gráfico</h3>
     <img src="./files/designCapa.webp" alt="">
     <div>
-      <h3>Curso Completo de Design Gráfico</h3>
-      <hr>
       <p>
         Neste curso aprenderemos:
       </p>
@@ -81,21 +79,19 @@
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico"
-        style="float: right;" target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
-  <div class="child js-post" id="webdesign">
+  <div class="js-post" id="webdesign">
+    <h3>Curso de Web Design</h3>
+    <p>HTML, CSS e Web Design Responsivo</p>
     <img src="./files/webdesignCapa.png" alt="">
     <div>
-      <h3>Curso de Web Design</h3>
-      <p>HTML, CSS e Web Design Responsivo</p>
-      <hr>
       <p>
         O Web Design é o setor voltado para a criação de páginas Web Estáticas destinadas a exibir conteúdo, como sites,
         blogs entre outras, é um amplo setor e muito requisitado no mercado. Neste curso você aprenderá como criar sites
@@ -103,20 +99,18 @@
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" style="float: right;"
-        target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
-  <div class="child js-post" id="javascript">
+  <div class="js-post" id="javascript">
+    <h3>Curso Completo de Javascript</h3>
     <img src="./files/javascriptCapa.png" alt="">
     <div>
-      <h3>Curso Completo de Design Gráfico</h3>
-      <hr>
       <p>
         O Javascript é uma linguagem de programação, diferente do HTML e do CSS, neste curso você iniciará sua carreira
         como programador com a linguagem mais utilizada em todo o mundo! Com o Javascript você aprenderá como fazer seu
@@ -125,50 +119,47 @@
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-javascript" style="float: right;"
-        target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-javascript" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
-  <div class="child js-post" id="webapp">
+  <div class="js-post" id="webapp">
+    <h3>
+      Desenvolvimento de Aplicações Web
+    </h3>
     <img src="./files/cursoCapa.jpg" alt="">
     <div>
-      <h3>
-        Desenvolvimento de Aplicações Web
-      </h3>
-      <hr>
       <p>
         Este curso está em construção.
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="" style="float: right;" target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
-  <div class="child js-post" id="cpp">
+  <div class="js-post" id="cpp">
+    <h3>Curso de Programação em C++</h3>
     <img src="./files/cursoCapa.jpg" alt="">
     <div>
-      <h3>Curso de Programação em C++</h3>
-      <hr>
       <p>
         Este curso está em construção.
       </p>
     </div>
     <div
-      style="display:grid; place-items: center; width: 100%; grid-template-columns: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" href="" style="float: right;">Curso on-line</a>
-      <a class="js-button" href="contato.html" style="float: right;">Curso presencial</a>
-      <a class="js-button" href="" style="float: right;">E-book</a>
-      <a class="js-button" href="" style="float: right;" target="_blank">Apostila impressa</a>
+      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
+      <a class="js-button" href="">Matrícula do curso on-line</a>
+      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
+      <a class="js-button" href="">Apostila em e-book</a>
+      <a class="js-button" href="" target="_blank">Apostila impressa</a>
     </div>
   </div>
   <br>
@@ -179,7 +170,7 @@
     <a class="js-button" href="/aprendizado.html">Aprendizado on-line</a>
   </div>
   <br>
-  <div class="js-post" style="width: 100%; display: grid; grid-template-rows: auto 1fr;" id="ads">
+  <div class="js-post" style="width: 100%; display: none; grid-template-rows: auto 1fr;" id="ads">
     <span style="color:white; font-family: sans-serif; display: grid; grid-template-columns: auto 1fr auto;">
       <span>Publicidade</span>
       <span></span>
@@ -191,7 +182,6 @@
         crossorigin="anonymous"></script>
     </div>
   </div>
-  <br>
 
 </div>
 
