--- a/index.html
+++ b/index.html
@@ -162,29 +162,11 @@
   </div>
   <br>
   <div class="js-post">
-    <h1>Seja muito bem-vindo!</h1>
-    <p>Seja para contratar um projeto, adquirir uma apostila do seu setor, ou aprender, este é seu lugar.</p>
-  </div>
-  <br>
-  <div class="js-post"
-    style="background-color: var(--pretoMedio); border: 1px solid; border-image: linear-gradient(#FB0, #730)1;">
-    <div style="display: inline-block; vertical-align: top;">
-      <h3>Formação</h3>
-      <ul>
-        <li>Ensino Médio Completo</li>
-        <li>Inglês Básico</li>
-        <li>Espanhol Básico</li>
-      </ul>
-    </div>
-    <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
-      <h3>Habilidades</h3>
-      <ul>
-        <li>Instrutor de cursos técnico/profissionalizantes</li>
-        <li>Design Gráfico</li>
-        <li>Modelagem 3D e CAD (para Arquitetura e Interiores)</li>
-        <li>Desenvolvimento de software</li>
-      </ul>
-    </div>
+    <h1>Sobre mim</h1>
+    <p>
+      Instrutor de cursos técnicos e profissionalizantes, projetista cadista no setor de arquitetura e interiores.
+      Morador da cidade de Luis Eduardo Magalhães no oeste da Bahia.
+    </p>
   </div>
   <br>
   <div class="js-post"
@@ -212,6 +194,27 @@
     <p>
       Atualmente trabalho exclusivamente como freelancer e ministro aulas particulares de cursos profissionalizantes.
     </p>
+  </div>
+  <br>
+  <div class="js-post"
+    style="background-color: var(--pretoMedio); border: 1px solid; border-image: linear-gradient(#FB0, #730)1;">
+    <div style="display: inline-block; vertical-align: top;">
+      <h3>Formação</h3>
+      <ul>
+        <li>Ensino Médio Completo</li>
+        <li>Inglês Básico</li>
+        <li>Espanhol Básico</li>
+      </ul>
+    </div>
+    <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
+      <h3>Habilidades</h3>
+      <ul>
+        <li>Instrutor de cursos técnico/profissionalizantes</li>
+        <li>Design Gráfico</li>
+        <li>Modelagem 3D e CAD (para Arquitetura e Interiores)</li>
+        <li>Desenvolvimento de software</li>
+      </ul>
+    </div>
   </div>
   <br>
   <div class="js-post">
