--- a/contato.html
+++ b/contato.html
@@ -20,43 +20,45 @@
 
 <menu-bar></menu-bar>
 <div class="js-page">
-<div class="js-post">
-  <h1>Contato</h1>
-  <p>Entre em contato pelo meio de sua preferência ou conheça minhas mídias sociais.</p>
-</div>
-<br>
-<!--#region CURSOS -->
-<div class="container">
-  <a class="child" href="mailto:jorge.sos777@outlook.com" target="_blank">
-    <img src="./files/gmail.png" alt="">
-    <p>Gmail</p>
-  </a>
-  <a class="child" href="https://wa.me/5577991161892" target="_blank">
-    <img src="./files/whatsapp.png" alt="">
-    <p>Whatsapp</p>
-  </a>
-  <a class="child" href="https://www.facebook.com/artesgraficaseprojetos" target="_blank">
-    <img src="./files/facebook.png" alt="">
-    <p>Facebook</p>
-  </a>
-  <a class="child" href="https://www.youtube.com/@jorgeoliveiraonline" target="_blank">
-    <img src="./files/Youtube.png" alt="">
-    <p>Youtube</p>
-  </a>
-  <a class="child" href="https://www.instagram.com/jorgeoliveiraonline/" target="_blank">
-    <img src="./files/instagram.png" alt="">
-    <p>Instagram</p>
-  </a>
-  <a class="child" href="https://clubedeautores.com.br/livros/autores/jorge-souza-oliveira-dos-santos" target="_blank">
-    <img src="./files/clube.png" alt="">
-    <p>Clube de Autores</p>
-  </a>
-  <a class="child" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">
-    <img src="./files/Workana.png" alt="">
-    <p>Workana</p>
-  </a>
-</div>
-<br>
+  <br>
+  <div class="js-post">
+    <h1>Contato</h1>
+    <p>Entre em contato pelo meio de sua preferência ou conheça minhas mídias sociais.</p>
+  </div>
+  <br>
+  <!--#region CURSOS -->
+  <div class="container">
+    <a class="child" href="mailto:jorge.sos777@outlook.com" target="_blank">
+      <img src="./files/gmail.png" alt="">
+      <p>Gmail</p>
+    </a>
+    <a class="child" href="https://wa.me/5577991161892" target="_blank">
+      <img src="./files/whatsapp.png" alt="">
+      <p>Whatsapp</p>
+    </a>
+    <a class="child" href="https://www.facebook.com/artesgraficaseprojetos" target="_blank">
+      <img src="./files/facebook.png" alt="">
+      <p>Facebook</p>
+    </a>
+    <a class="child" href="https://www.youtube.com/@jorgeoliveiraonline" target="_blank">
+      <img src="./files/Youtube.png" alt="">
+      <p>Youtube</p>
+    </a>
+    <a class="child" href="https://www.instagram.com/jorgeoliveiraonline/" target="_blank">
+      <img src="./files/instagram.png" alt="">
+      <p>Instagram</p>
+    </a>
+    <a class="child" href="https://clubedeautores.com.br/livros/autores/jorge-souza-oliveira-dos-santos"
+      target="_blank">
+      <img src="./files/clube.png" alt="">
+      <p>Clube de Autores</p>
+    </a>
+    <a class="child" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">
+      <img src="./files/Workana.png" alt="">
+      <p>Workana</p>
+    </a>
+  </div>
+  <br>
 </div>
 <style>
   * {
@@ -71,45 +73,37 @@
     gap: auto;
     padding: 30px 15% 30px 15%;
   }
-  
+
   .child {
     text-decoration: none;
     font-family: sans-serif;
-    display: table-cell;
     color: white;
     vertical-align: middle;
     opacity: 0.5;
     transition-duration: 500ms;
     filter: grayscale(1);
   }
-  
+
   .child * {
     text-align: center;
     width: 70px;
     display: block;
     margin: 15px auto 15px auto;
   }
-  
+
   .child p {
     text-indent: 0;
   }
-  
+
   .child:hover {
     opacity: 1;
     filter: grayscale(0);
   }
 
   @media (max-width: 600px) {
-    .container {
-      display: table;
-      width: 100%;
-    }
-
     .child {
-      display: table-row;
       filter: grayscale(0);
       opacity: 1;
-      width: 100%;
     }
   }
 </style>
