--- a/downloads.html
+++ b/downloads.html
@@ -25,6 +25,8 @@
                 de Informática Básica e Avançada</a>
         <a class="js-button" href="https://drive.google.com/drive/folders/1T14FNxgtS6zDU5he6A74MhUIRTLAlP5i?usp=sharing"
                 target="_blank">Curso Completo de Design Gráfico</a>
+        <a class="js-button" href="https://drive.google.com/drive/folders/1ysC_Hta6de-hA6cI5Z6Zc_PdkSVElh6B?usp=sharing"
+                target="_blank">Curso de Modelagem 3D e Desenho Técnico</a>
         <a class="js-button" href="https://drive.google.com/drive/folders/1eCiMVTwoZE93wsB57dURkXkHCAl_MENE?usp=sharing"
                 target="_blank">Curso de Web Design</a>
         <a class="js-button" href="https://drive.google.com/drive/folders/14wSufoQj0-dIW7taS6adiV9qBDmh59ea?usp=sharing"
